--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ a {
   }
 
 a:hover {
-    color: rgb(88, 88, 88);
+    color: rgb(97, 97, 97);
 }
 
 div {
@@ -25,7 +25,7 @@ div {
     padding: 10px;
     text-align: center;
     border-radius: 5px;
-    background: rgba(249, 249, 249, 0.7);
+    background: rgb(236, 236, 236);
     margin-left: auto; 
     margin-right: auto;
 }
